# dark_solver

./: .env.example  .gitignore  Cargo.toml  README.md  SETUP.md  analyze_target.sh  config.toml
.github/workflows/: ci.yml
benches/: main_solver_loop.rs
benchmarks/: README.md  run_benchmarks.sh
benchmarks/targets/: base_aave_v3_pool.toml  base_aerodrome_factory.toml  base_balancer_vault.toml  base_moonwell_comptroller.toml  base_morpho_blue.toml  (+1 more)
docs/: ARCHITECTURE.md  CASE_STUDY_TEMPLATE.md  OPERATIONS.md  README.md  USE_CASES.md  build_technical_overview.sh  technical_overview.tex
reports/: README.md  critical_initialization_race.md
research/: README.md
scripts/: clean_workspace.sh
src/: basescan.rs  defillama.rs  error.rs  fork_db.rs  lib.rs  main.rs  scanner.rs  target_queue.rs
tests/: advanced_analysis.rs  algebraic_storage_test.rs  anchor_utils.rs  anchors.rs  bit_level_soundness_test.rs  create2_prediction_test.rs  division_by_zero_test.rs  engine_hardening_test.rs  evm_coverage.rs  flash_loan_check.rs  gauntlet.rs  guided_exploration_test.rs  integrity_check.rs  keccak_chain_test.rs  keccak_fix.rs  keccak_lazy_expansion_test.rs  keccak_resolution_test.rs  memory_init_test.rs  multi_sender_logic_test.rs  oracle_manipulation_test.rs  path_explosion_test.rs  proptests.rs  reentrancy_invariant_targeting_test.rs  reentrancy_test.rs  runtime_preimage_test.rs  simulation_safety.rs  simulation_test.rs  snapshot_pollution_test.rs  snapshot_test.rs  storage_discovery.rs  storage_isolation.rs  storage_soundness_check.rs  token_profit_test.rs
(+409 files in other folders)
